# shot_prototype

./: CMakeLists.txt  LICENSE.txt  Tuprules.tup
shot/: AppHandler.cpp  AppHandler.h  Config.cpp  Config.h  Db.cpp  Db.h  DbClient.cpp  DbClient.h  Filer.cpp  Filer.h  FilerTest.cpp  Handler.cpp  Handler.h  HandlerTest.cpp  HtmlTemplate.cpp  HtmlTemplate.h  IOLoop.cpp  IOLoop.h  Logger.cpp  Logger.h  Model.cpp  Model.h  Options.cpp  Options.h  Parser.cpp  Parser.h  ParserTest.cpp  Request.cpp  Request.h  RequestTest.cpp  Response.cpp  Response.h  Server.cpp  Server.h  ServerTest.cpp  SitemapTemplate.cpp  SitemapTemplate.h  SyncHandler.cpp  SyncHandler.h  Tupfile  (+18 more)
shotutil/: Tupfile  main.cpp  utils.cpp  utils.h
static/: app.css  app.js
test/: FilerTest.cpp  HandlerTest.cpp  ParserTest.cpp  RequestTest.cpp  ServerTest.cpp  Tupfile  translit_test.cpp  utils_test.cpp
